# adventofcode2022

./: adventofcode.cabal  stack.yaml
1/: Main.hs
2/: Main.hs
3/: Main.hs
4/: Main.hs
5/: Main.hs
6/: Main.hs
7/: Main.hs
lib/Lib/: Parser.hs
